# GreenhousePython_FJB

./: .gitignore  README.md  SECURITY.md  commands_usage.sh  comments.txt  dothing.sh  install.sh  install_and_uninstall.sh  pyproject.toml
.github/: dependabot.yml
.github/workflows/: codeql.yml
docs/: basic_usage.md
docs/man/: greenhouse.1  greenhouse.md
src/: cameraControl.py  dataIndex.txt  lights.py  main.py  mcp.py  nonsense.py  test_camera.py  water_control.py
src/greenhaus/: nonsense.py
src/greenhousepython/: cfg.txt  dataIndex.txt  gpio_wrapper.py  main.py  nonsense.py
