#TODO: add classifiers

[project]
name = "GreenhousePython"
version = "0.3.0"
description = "It's a python thing that automates a greenhouse."
license = "MIT"
requires-python = ">=3.9,<4.0"
authors = [ { name = "Frank J. Barth", email = "frank.barth@outlook.com" }, { name = "Phillip Spalitta", email = "sp29174@students.mcpasd.k12.wi.us" } ]
maintainers = [ { name = "Benjamin Shrago", email = "bshrago@mcpasd.k12.wi.us" } ]
keywords = [ "greenhouse", "automation", "the music of the spheres" ]
dependencies = [ "astral>=2.0", "typer>=0.12.1" ]
readme = "README.md"

[project.optional-dependencies]
camera-nonsense = ["opencv-python"]
rpi = [ "mcp3008", "RPi.GPIO" ]
dev = [ "wheel", "poetry>=2.0.0" ]
GUI = [ "PyGObject>=3.40.0" ]

[build-system]
requires = ["poetry-core>2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.urls]
homepage = "https://mcpasd.k12.wi.us/"
repository = "https://github.com/sp29174/GreenhousePython"
documentation = "https://github.com/sp29174/GreenhousePython/wiki"

[tool.poetry]
package-mode = true
include = [ { path = "images" }, { path = "docs" } ]
